 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2014 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2014 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2014-01-19

- r1057 introduce hint of fillseed for both fluid and solid [ver 1.5.6]
 - /ApplicationControl/HintOfFillingFluid >> /ApplicationControl/HintOfFillSeedDirection
 - add /ApplicationControl/HintOfFillSeedMedium
 - rename int FillHint -> int FillSeedDir
 - add int FillSeedMedium, int RefSeedMedium
 - check Cutlib-3.2.0 on Mac
 
--------------------------
2014-01-13

- r1056 change the keyword of 'FluidDirection' to 'InOut'

--------------------------
2014-01-03

- r1055 change include files for RHEL [ver 1.5.5]

- r1054 Naive Implementation for SOR2SMA [ver 1.5.4]
 - renew the expression of year in copuright from 2013 to 2014
 - Default of FillHint is set to X_minus in getApplicationControl()
 - add naiveImplementation option for SOR2SMA for experiment
 - move some methods related iteration parameter in Control class to IterationCtl class
 
--------------------------
2013-12-29

- r1053 bug fix [ver 1.5.3]
 - Monitor & Sampling related issue #1

--------------------------
2013-12-23

- r1052 bug fix & check [ver 1.5.2]
 - add ParseBC::loadLocalBCfromPolylibFile()
 - bug fix : issue #1 & #5 on github
 - read SPEC_VEL parameters in case of thermal flow

--------------------------
2013-12-05

- r1051 bug fix [ver 1.5.1]
 - incorrect calculation end was set

--------------------------
2013-11-23

- r1050 Introduction of Glyph
  - add /GeometryModel/OutputGlyph
  - add FB/Glyph.cpp, Glyph.h

--------------------------
2013-11-13

- r1049 bug fix: add Hostonly_ for minDistance()
  - In case of Polygon loading, MPI process yields seg. fault.
