@@ -321,7 +321,14 @@ void FFV::NS_FS_E_CDS()
     TIMING_start(tm_poi_src_nrm);
     rhs_nrm = 0.0;
     flop = 0.0;
-    poi_rhs_(&rhs_nrm, d_b, size, &guide, d_ws, d_sq, d_bcp, &dh, &dt, &flop);
+    if (C.Hide.Bit3option == OFF)
+    {
+      poi_rhs_(&rhs_nrm, d_b, size, &guide, d_ws, d_sq, d_bcp, &dh, &dt, &flop);
+    }
+    else
+    {
+      poi_rhs_bit3_(&rhs_nrm, d_b, size, &guide, d_ws, d_sq, d_bcp, &dh, &dt, &flop);
+    }
     TIMING_stop(tm_poi_src_nrm, flop);
     
     if ( numProc > 1 )
@@ -341,7 +348,14 @@ void FFV::NS_FS_E_CDS()
     TIMING_start(tm_poi_src_nrm);
     res_init = 0.0;
     flop = 0.0;
-    poi_residual_(&res_init, size, &guide, d_p, d_b, d_bcp, &flop);
+    if (C.Hide.Bit3option == OFF)
+    {
+      poi_residual_(&res_init, size, &guide, d_p, d_b, d_bcp, &flop);
+    }
+    else
+    {
+      poi_residual_bit3_(&res_init, size, &guide, d_p, d_b, d_bcp, &flop);
+    }
     TIMING_stop(tm_poi_src_nrm, flop);
     
     if ( numProc > 1 )
